clang/test/BSC/Negative/SafeZone/safe_expr/safe_expr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe void test_safe_expr1(void){
    int a = 0;
    a++;                              // allowed
    int a1 = _Unsafe(a++);              // ok
    int *b = &a;                      // expected-error {{'&' operator is forbidden in the safe zone}}
    int *c = _Unsafe(&a);              // ok
    _Unsafe {
        int *d = &a;                  // ok
        int *e = _Safe(&a);            // expected-error {{'&' operator is forbidden in the safe zone}}
    }
}

void test_safe_expr2() {
    int a = 0;
    a++;                             // ok
    int a1 = _Safe(a++);              // expected-error {{initializing 'int' with an expression of incompatible type 'void'}} expected-note {{prefix/postfix '++' and '--' in safe zone produce void; use only for side effect}}
    int *b = &a;                     // ok
    int *c = _Safe(&a);               // expected-error {{'&' operator is forbidden in the safe zone}}
    _Safe {
        int *d = &a;                 // expected-error {{'&' operator is forbidden in the safe zone}}
        int *e = _Unsafe(&a);         // ok
    }
}

_Safe void foo<T>(T* _Owned p) {
    T * a = (T*)p                       // expected-error {{conversion from type 'T *_Owned' to 'T *' is forbidden in the safe zone}}
    T * b = _Unsafe((T*)p);              // ok
    T * c = (T*)p;                      // expected-error {{conversion from type 'T *_Owned' to 'T *' is forbidden in the safe zone}}
}

_Safe void test_safe_expr3(void) {
    int a = 0;
    int *_Owned p = _Unsafe((int *_Owned)&a);
    foo<int>(p);
}

int getNum() {
    return 1;
}

_Safe void setNum(int b) {
    int a = b;
    return;
}

_Safe void test_safe_expr4(void) {
    setNum(getNum());                       // expected-error {{unsafe function call is forbidden in the safe zone}}
    setNum(_Unsafe(getNum()));               // ok
    _Unsafe {
        setNum(getNum());                   // ok
        setNum(_Safe(getNum()));             // expected-error {{unsafe function call is forbidden in the safe zone}}
    }
}